--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -8,6 +8,7 @@ font-weight: bold;
 
 .container {
   display: flex;
+
   width: 460px;
   height: 150px;
   border: 2px solid #7AB5CC;
@@ -15,7 +16,9 @@ font-weight: bold;
 }
 
 .flex-num{
-  height: 100%;
+  display: flex;
+  align-items: center;
+  height: 95%;
   min-width: 30px;
 margin-left: 3px;
 margin-top: 3px;
@@ -23,7 +26,10 @@ margin-bottom: 3px;
 text-align: center;
 background-color: #97E0FA;
 }
-
+span {
+  margin: 0 auto;
+  font-weight: bold;
+}
 #flex-btn:focus{
   background-color: #50cdff;
   border-color: rgb(226, 224, 224);
